# PB-AM-deprecated

./: .gitignore  CMakeLists.txt  README  README.md
doc/html/: BD_8cpp.html  BD_8cpp__incl.map  BD_8cpp__incl.md5  BD_8cpp_a0d19adb86436f5ee44d7eee9646b0225_cgraph.map  BD_8cpp_a0d19adb86436f5ee44d7eee9646b0225_cgraph.md5  BD_8cpp_a268054c4cc84d387786a1a4d52e90019_cgraph.map  BD_8cpp_a268054c4cc84d387786a1a4d52e90019_cgraph.md5  BD_8cpp_a383d01cbd424a11c6571cb85c748a9fb_cgraph.map  BD_8cpp_a383d01cbd424a11c6571cb85c748a9fb_cgraph.md5  BD_8cpp_a398405351f04ca4ed39e969ff655925d_cgraph.map  BD_8cpp_a398405351f04ca4ed39e969ff655925d_cgraph.md5  BD_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  BD_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  BD_8cpp_a3dcb9eab839663dc12e81ffe369eb3ef_cgraph.map  BD_8cpp_a3dcb9eab839663dc12e81ffe369eb3ef_cgraph.md5  BD_8cpp_a40a8450c72f1738cbad72d80b48f4b16_cgraph.map  BD_8cpp_a40a8450c72f1738cbad72d80b48f4b16_cgraph.md5  BD_8cpp_a97854abebeb41d867b7fda2e39d0a439_cgraph.map  BD_8cpp_a97854abebeb41d867b7fda2e39d0a439_cgraph.md5  BD_8cpp_a9c965fd0c3d37e5f71c0cd6a33218ea8_cgraph.map  BD_8h.html  BD_8h__dep__incl.map  (+467 more)
docs/: PBE_Manual_V1.docx
src/: .BD.cpp.swp  BD.cpp  BD.h  CMakeLists.txt  Makefile  cmcoeff.cpp  cmcoeff.h  gradcoeff.cpp  gradcoeff.h  main.cpp  mcoeff.cpp  mcoeff.h  mpe.cpp  mpe.h  pb-analytical  pdb.cpp  pdb.h  protein.cpp  protein.h  rotcoeff.cpp  rotcoeff.h  shcoeff.cpp  shcoeff.h  torqcoeff.cpp  torqcoeff.h  transcoeff.cpp  transcoeff.h  tricoeff.cpp  tricoeff.h  util.h  xform.cpp  xform.h
test/: README  outfile
(+251 files in other folders)
